# VoxelGame

./: .clang-format  .gitignore  CMakeLists.txt  GettingStarted.md  LICENSE.txt  README.md  VoxelGame.sln
Dependencies/GLAD/include/glad/: glad.h
Dependencies/GLAD_OLD/include/glad/: glad.h
Thesis/: thesis.docx
Thesis/latex/: DP_hepner_lukas.tex  mybibliographyfile.bib
VoxelExplorer/: VoxelExplorer.vcxproj  VoxelExplorer.vcxproj.filters  main.cpp
VoxelExplorer/examples/: ExampleScene.cpp  ExampleScene.h
VoxelExplorer/res/l-systems/: Koch.txt
VoxelExplorer/res/l-systems/plants/: Acacia.txt  NormalTree.txt  Shrubs.txt
VoxelExplorer/res/shaders/: Light.frag  Light.vert  LightBatch.vert  Light_csm.frag  Shadow_csm.geom  Shadow_csm_closed.geom  Shadow_csm_closed.vert  meshBatch.vert
VoxelExplorer/res/textures/: make_spritesheet.py
VoxelExplorer/src/: Biome.cpp  Biome.h  BlockFactory.h  Game.cpp  Game.h  Terrain.cpp  Terrain.h  TerrainGen.cpp  TerrainGen.h
VoxelExplorer/src/vegetation/: GrassFactory.cpp  GrassFactory.h  LSystemsManager.cpp  LSystemsManager.h  Tree.cpp  Tree.h  TreeFactory.cpp  TreeFactory.h
VoxelGame/: .clang-format  CMakeLists.txt  VoxelGame.vcxproj  VoxelGame.vcxproj.filters  imgui.ini
VoxelGame/examples/: ExampleScene.cpp  ExampleScene.h
VoxelGame/res/l-systems/: Format.txt
VoxelGame/res/l-systems/plants/: Grass.txt  Grass2D.txt  Shrubs.txt
VoxelGame/res/shaders/: BatchTexture.frag  BatchTexture.vert  Color.frag  Empty.frag  Light.frag  LightBatch.vert  Light_csm.frag  Mesh.frag  Mesh.vert  Shadow_csm.geom  Shadow_csm.vert
VoxelGame/res/textures/voxel-pack-updated/Spritesheets/: make_spritesheet.py
VoxelGame/src/: Application.cpp  IndexBuffer.cpp  IndexBuffer.h  Main.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
VoxelGame/src/engine/: BlockFaces.cpp  BlockFaces.h  BlockInfo.cpp  BlockInfo.h  Chunk.cpp  Chunk.h  Commands.cpp  Commands.h  EntryPoint.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  InputHandler.cpp  InputHandler.h  Log.cpp  Log.h  Random.cpp  Random.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h
VoxelGame/src/engine/Components/: Component.h  Mesh.h  SpritesheetTex.h  Transform.h
VoxelGame/src/engine/L-systems/: GrammarExecutor.cpp  GrammarExecutor.h  GrammarParser.cpp  GrammarParser.h  LSystem.h  LSystemExecutor.cpp  LSystemExecutor.h  LSystemParser.cpp  LSystemParser.h  RandomGrammar.cpp  RandomGrammar.h  Turtle.cpp  Turtle.h
VoxelGame/src/engine/files/: Export.cpp  Export.h
VoxelGame/src/examples/: ExampleScene.cpp  ExampleScene.h
VoxelGame/src/game/: Biome.cpp  Biome.h  BlockFactory.cpp  BlockFactory.h  Terrain.cpp  Terrain.h  TerrainGen.cpp  TerrainGen.h  Weather.h
VoxelGame/src/game/vegetation/: GrassFactory.cpp  GrassFactory.h  LSystemsManager.cpp  LSystemsManager.h  Tree.cpp  Tree.h  TreeFactory.cpp  TreeFactory.h
VoxelGame/src/helpers/: Constants.h  Math.cpp  Math.h  Print.h
VoxelGame/src/open_gl/: GpuTimer.cpp  GpuTimer.h  InputHandlerGl.cpp  InputHandlerGl.h  WindowManagerGl.cpp  WindowManagerGl.h
VoxelGame/src/renderer/: Camera.cpp  Camera.h  CubeRenderer.cpp  CubeRenderer.h  Debug.cpp  Debug.h  DepthMap.h  Mesh.cpp  Mesh.h  ResourceManager.cpp  ResourceManager.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  SpriteSheet.h  Texture2D.cpp  Texture2D.h
VoxelGame/src/renderer/light/: DepthMap.cpp  DepthMap.h  ShadowMap.cpp  ShadowMap.h
VoxelGame/src/tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h
VoxelGame/tests/: TestClass.h  TestRunner.cpp  TestRunner.h
VoxelGame/tests/engine/: BlockFacesTest.cpp  BlockInfoTest.cpp  BlockInfoTest.h  GameObjectFactoryTest.cpp  GameObjectTest.cpp  PerlinTest.cpp  PerlinTest.h  RandomTest.cpp  SceneTest.cpp  TurtleTest.cpp
VoxelGame/tests/engine/Components/: TransformTest.cpp
VoxelGame/tests/engine/L-systems/: GrammarParserTest.cpp  LSystemExecutorTest.cpp  LSystemParserTest.cpp  RandomGrammarTest.cpp  TurtleTest.cpp  grammar.txt  multipleGrammars.txt
VoxelGame/tests/engine/L-systems/testData/: grammar.txt
VoxelGame/tests/helpers/: MathTest.cpp  PrintTest.cpp
VoxelGame/tests/renderer/: ShaderTest.cpp
exe/res/l-systems/plants/: JungleTree.txt  Pine.txt
exe/res/shaders/: Light_csm.vert  Shadow.frag  Shadow.vert
