set(PROJECT_NAME VoxelGame)

################################################################################
# Source groups
################################################################################
set(no_group_source_files
    ".clang-format"
    "res/l-systems/Format.txt"
    "res/l-systems/Koch.txt"
    "res/l-systems/plants/Acacia.txt"
    "res/l-systems/plants/Grass.txt"
    "res/l-systems/plants/Grass2.txt"
    "res/l-systems/plants/Grass2D.txt"
    "res/l-systems/plants/JungleTree.txt"
    "res/l-systems/plants/NormalTree.txt"
    "res/l-systems/plants/Pine.txt"
    "res/l-systems/plants/Shrubs.txt"
    "res/shaders/BatchTexture.frag"
    "res/shaders/BatchTexture.vert"
    "res/shaders/Color.frag"
    "res/shaders/Empty.frag"
    "res/shaders/Light.frag"
    "res/shaders/Light.vert"
    "res/shaders/Light_csm.frag"
    "res/shaders/Light_csm.vert"
    "res/shaders/LightBatch.vert"
    "res/shaders/Mesh.frag"
    "res/shaders/Mesh.vert"
    "res/shaders/MeshBatch.vert"
    "res/shaders/Shadow.frag"
    "res/shaders/Shadow.vert"
    "res/shaders/Shadow_csm.geom"
    "res/shaders/Shadow_csm.vert"
    "res/shaders/Shadow_csm_closed.geom"
    "res/shaders/Shadow_csm_closed.vert"
    "res/shaders/Texture.fs"
    "res/shaders/Texture.vs"
    "res/textures/make_spritesheet.py"
    "res/textures/voxel-pack-updated/License.txt"
    "src/vendor/perlin_noise/LICENSE"
    "src/vendor/simplex_noise/LICENSE.txt"
    "tests/engine/L-systems/testData/grammar.txt"
    "tests/engine/L-systems/testData/multipleGrammars.txt"
)
source_group("" FILES ${no_group_source_files})

set(Header_Files
    "examples/ExampleScene.h"
    "src/engine/BlockFaces.h"
    "src/engine/BlockInfo.h"
    "src/engine/Chunk.h"
    "src/engine/Commands.h"
    "src/engine/components/Component.h"
    "src/engine/components/Mesh.h"
    "src/engine/components/SpritesheetTex.h"
    "src/engine/components/Transform.h"
    "src/engine/EntryPoint.h"
    "src/engine/files/Export.h"
    "src/engine/Game.h"
    "src/engine/GameObject.h"
    "src/engine/GameObjectFactory.h"
    "src/engine/InputHandler.h"
    "src/engine/L-systems/LSystem.h"
    "src/engine/L-systems/LSystemExecutor.h"
    "src/engine/L-systems/LSystemParser.h"
    "src/engine/L-systems/RandomGrammar.h"
    "src/engine/L-systems/Turtle.h"
    "src/engine/Random.h"
    "src/engine/ResourceManager.h"
    "src/engine/Scene.h"
    "src/game/Biome.h"
    "src/game/BlockFactory.h"
    "src/game/Terrain.h"
    "src/game/TerrainGen.h"
    "src/game/vegetation/GrassFactory.h"
    "src/game/vegetation/LSystemsManager.h"
    "src/game/vegetation/Tree.h"
    "src/game/vegetation/TreeFactory.h"
    "src/game/Weather.h"
    "src/helpers/Constants.h"
    "src/helpers/Math.h"
    "src/helpers/Print.h"
    "src/open_gl/GpuTimer.h"
    "src/open_gl/InputHandlerGl.h"
    "src/open_gl/WindowManagerGl.h"
    "src/renderer/Camera.h"
    "src/renderer/CubeRenderer.h"
    "src/renderer/Debug.h"
    "src/renderer/light/DepthMap.h"
    "src/renderer/light/ShadowMap.h"
    "src/renderer/Mesh.h"
    "src/renderer/SceneRenderer.h"
    "src/renderer/Shader.h"
    "src/renderer/SpriteSheet.h"
    "src/renderer/Texture2D.h"
    "src/vendor/glm/common.hpp"
    "src/vendor/glm/detail/_features.hpp"
    "src/vendor/glm/detail/_fixes.hpp"
    "src/vendor/glm/detail/_noise.hpp"
    "src/vendor/glm/detail/_swizzle.hpp"
    "src/vendor/glm/detail/_swizzle_func.hpp"
    "src/vendor/glm/detail/_vectorize.hpp"
    "src/vendor/glm/detail/compute_common.hpp"
    "src/vendor/glm/detail/compute_vector_relational.hpp"
    "src/vendor/glm/detail/func_common.inl"
    "src/vendor/glm/detail/func_common_simd.inl"
    "src/vendor/glm/detail/func_exponential.inl"
    "src/vendor/glm/detail/func_exponential_simd.inl"
    "src/vendor/glm/detail/func_geometric.inl"
    "src/vendor/glm/detail/func_geometric_simd.inl"
    "src/vendor/glm/detail/func_integer.inl"
    "src/vendor/glm/detail/func_integer_simd.inl"
    "src/vendor/glm/detail/func_matrix.inl"
    "src/vendor/glm/detail/func_matrix_simd.inl"
    "src/vendor/glm/detail/func_packing.inl"
    "src/vendor/glm/detail/func_packing_simd.inl"
    "src/vendor/glm/detail/func_trigonometric.inl"
    "src/vendor/glm/detail/func_trigonometric_simd.inl"
    "src/vendor/glm/detail/func_vector_relational.inl"
    "src/vendor/glm/detail/func_vector_relational_simd.inl"
    "src/vendor/glm/detail/qualifier.hpp"
    "src/vendor/glm/detail/setup.hpp"
    "src/vendor/glm/detail/type_float.hpp"
    "src/vendor/glm/detail/type_half.hpp"
    "src/vendor/glm/detail/type_half.inl"
    "src/vendor/glm/detail/type_mat2x2.hpp"
    "src/vendor/glm/detail/type_mat2x2.inl"
    "src/vendor/glm/detail/type_mat2x3.hpp"
    "src/vendor/glm/detail/type_mat2x3.inl"
    "src/vendor/glm/detail/type_mat2x4.hpp"
    "src/vendor/glm/detail/type_mat2x4.inl"
    "src/vendor/glm/detail/type_mat3x2.hpp"
    "src/vendor/glm/detail/type_mat3x2.inl"
    "src/vendor/glm/detail/type_mat3x3.hpp"
    "src/vendor/glm/detail/type_mat3x3.inl"
    "src/vendor/glm/detail/type_mat3x4.hpp"
    "src/vendor/glm/detail/type_mat3x4.inl"
    "src/vendor/glm/detail/type_mat4x2.hpp"
    "src/vendor/glm/detail/type_mat4x2.inl"
    "src/vendor/glm/detail/type_mat4x3.hpp"
    "src/vendor/glm/detail/type_mat4x3.inl"
    "src/vendor/glm/detail/type_mat4x4.hpp"
    "src/vendor/glm/detail/type_mat4x4.inl"
    "src/vendor/glm/detail/type_mat4x4_simd.inl"
    "src/vendor/glm/detail/type_quat.hpp"
    "src/vendor/glm/detail/type_quat.inl"
    "src/vendor/glm/detail/type_quat_simd.inl"
    "src/vendor/glm/detail/type_vec1.hpp"
    "src/vendor/glm/detail/type_vec1.inl"
    "src/vendor/glm/detail/type_vec2.hpp"
    "src/vendor/glm/detail/type_vec2.inl"
    "src/vendor/glm/detail/type_vec3.hpp"
    "src/vendor/glm/detail/type_vec3.inl"
    "src/vendor/glm/detail/type_vec4.hpp"
    "src/vendor/glm/detail/type_vec4.inl"
    "src/vendor/glm/detail/type_vec4_simd.inl"
    "src/vendor/glm/exponential.hpp"
    "src/vendor/glm/ext.hpp"
    "src/vendor/glm/ext/matrix_clip_space.hpp"
    "src/vendor/glm/ext/matrix_clip_space.inl"
    "src/vendor/glm/ext/matrix_common.hpp"
    "src/vendor/glm/ext/matrix_common.inl"
    "src/vendor/glm/ext/matrix_double2x2.hpp"
    "src/vendor/glm/ext/matrix_double2x2_precision.hpp"
    "src/vendor/glm/ext/matrix_double2x3.hpp"
    "src/vendor/glm/ext/matrix_double2x3_precision.hpp"
    "src/vendor/glm/ext/matrix_double2x4.hpp"
    "src/vendor/glm/ext/matrix_double2x4_precision.hpp"
    "src/vendor/glm/ext/matrix_double3x2.hpp"
    "src/vendor/glm/ext/matrix_double3x2_precision.hpp"
    "src/vendor/glm/ext/matrix_double3x3.hpp"
    "src/vendor/glm/ext/matrix_double3x3_precision.hpp"
    "src/vendor/glm/ext/matrix_double3x4.hpp"
    "src/vendor/glm/ext/matrix_double3x4_precision.hpp"
    "src/vendor/glm/ext/matrix_double4x2.hpp"
    "src/vendor/glm/ext/matrix_double4x2_precision.hpp"
    "src/vendor/glm/ext/matrix_double4x3.hpp"
    "src/vendor/glm/ext/matrix_double4x3_precision.hpp"
    "src/vendor/glm/ext/matrix_double4x4.hpp"
    "src/vendor/glm/ext/matrix_double4x4_precision.hpp"
    "src/vendor/glm/ext/matrix_float2x2.hpp"
    "src/vendor/glm/ext/matrix_float2x2_precision.hpp"
    "src/vendor/glm/ext/matrix_float2x3.hpp"
    "src/vendor/glm/ext/matrix_float2x3_precision.hpp"
    "src/vendor/glm/ext/matrix_float2x4.hpp"
    "src/vendor/glm/ext/matrix_float2x4_precision.hpp"
    "src/vendor/glm/ext/matrix_float3x2.hpp"
    "src/vendor/glm/ext/matrix_float3x2_precision.hpp"
    "src/vendor/glm/ext/matrix_float3x3.hpp"
    "src/vendor/glm/ext/matrix_float3x3_precision.hpp"
    "src/vendor/glm/ext/matrix_float3x4.hpp"
    "src/vendor/glm/ext/matrix_float3x4_precision.hpp"
    "src/vendor/glm/ext/matrix_float4x2.hpp"
    "src/vendor/glm/ext/matrix_float4x2_precision.hpp"
    "src/vendor/glm/ext/matrix_float4x3.hpp"
    "src/vendor/glm/ext/matrix_float4x3_precision.hpp"
    "src/vendor/glm/ext/matrix_float4x4.hpp"
    "src/vendor/glm/ext/matrix_float4x4_precision.hpp"
    "src/vendor/glm/ext/matrix_int2x2.hpp"
    "src/vendor/glm/ext/matrix_int2x2_sized.hpp"
    "src/vendor/glm/ext/matrix_int2x3.hpp"
    "src/vendor/glm/ext/matrix_int2x3_sized.hpp"
    "src/vendor/glm/ext/matrix_int2x4.hpp"
    "src/vendor/glm/ext/matrix_int2x4_sized.hpp"
    "src/vendor/glm/ext/matrix_int3x2.hpp"
    "src/vendor/glm/ext/matrix_int3x2_sized.hpp"
    "src/vendor/glm/ext/matrix_int3x3.hpp"
    "src/vendor/glm/ext/matrix_int3x3_sized.hpp"
    "src/vendor/glm/ext/matrix_int3x4.hpp"
    "src/vendor/glm/ext/matrix_int3x4_sized.hpp"
    "src/vendor/glm/ext/matrix_int4x2.hpp"
    "src/vendor/glm/ext/matrix_int4x2_sized.hpp"
    "src/vendor/glm/ext/matrix_int4x3.hpp"
    "src/vendor/glm/ext/matrix_int4x3_sized.hpp"
    "src/vendor/glm/ext/matrix_int4x4.hpp"
    "src/vendor/glm/ext/matrix_int4x4_sized.hpp"
    "src/vendor/glm/ext/matrix_projection.hpp"
    "src/vendor/glm/ext/matrix_projection.inl"
    "src/vendor/glm/ext/matrix_relational.hpp"
    "src/vendor/glm/ext/matrix_relational.inl"
    "src/vendor/glm/ext/matrix_transform.hpp"
    "src/vendor/glm/ext/matrix_transform.inl"
    "src/vendor/glm/ext/matrix_uint2x2.hpp"
    "src/vendor/glm/ext/matrix_uint2x2_sized.hpp"
    "src/vendor/glm/ext/matrix_uint2x3.hpp"
    "src/vendor/glm/ext/matrix_uint2x3_sized.hpp"
    "src/vendor/glm/ext/matrix_uint2x4.hpp"
    "src/vendor/glm/ext/matrix_uint2x4_sized.hpp"
    "src/vendor/glm/ext/matrix_uint3x2.hpp"
    "src/vendor/glm/ext/matrix_uint3x2_sized.hpp"
    "src/vendor/glm/ext/matrix_uint3x3.hpp"
    "src/vendor/glm/ext/matrix_uint3x3_sized.hpp"
    "src/vendor/glm/ext/matrix_uint3x4.hpp"
    "src/vendor/glm/ext/matrix_uint3x4_sized.hpp"
    "src/vendor/glm/ext/matrix_uint4x2.hpp"
    "src/vendor/glm/ext/matrix_uint4x2_sized.hpp"
    "src/vendor/glm/ext/matrix_uint4x3.hpp"
    "src/vendor/glm/ext/matrix_uint4x3_sized.hpp"
    "src/vendor/glm/ext/matrix_uint4x4.hpp"
    "src/vendor/glm/ext/matrix_uint4x4_sized.hpp"
    "src/vendor/glm/ext/quaternion_common.hpp"
    "src/vendor/glm/ext/quaternion_common.inl"
    "src/vendor/glm/ext/quaternion_common_simd.inl"
    "src/vendor/glm/ext/quaternion_double.hpp"
    "src/vendor/glm/ext/quaternion_double_precision.hpp"
    "src/vendor/glm/ext/quaternion_exponential.hpp"
    "src/vendor/glm/ext/quaternion_exponential.inl"
    "src/vendor/glm/ext/quaternion_float.hpp"
    "src/vendor/glm/ext/quaternion_float_precision.hpp"
    "src/vendor/glm/ext/quaternion_geometric.hpp"
    "src/vendor/glm/ext/quaternion_geometric.inl"
    "src/vendor/glm/ext/quaternion_relational.hpp"
    "src/vendor/glm/ext/quaternion_relational.inl"
    "src/vendor/glm/ext/quaternion_transform.hpp"
    "src/vendor/glm/ext/quaternion_transform.inl"
    "src/vendor/glm/ext/quaternion_trigonometric.hpp"
    "src/vendor/glm/ext/quaternion_trigonometric.inl"
    "src/vendor/glm/ext/scalar_common.hpp"
    "src/vendor/glm/ext/scalar_common.inl"
    "src/vendor/glm/ext/scalar_constants.hpp"
    "src/vendor/glm/ext/scalar_constants.inl"
    "src/vendor/glm/ext/scalar_int_sized.hpp"
    "src/vendor/glm/ext/scalar_integer.hpp"
    "src/vendor/glm/ext/scalar_integer.inl"
    "src/vendor/glm/ext/scalar_packing.hpp"
    "src/vendor/glm/ext/scalar_packing.inl"
    "src/vendor/glm/ext/scalar_relational.hpp"
    "src/vendor/glm/ext/scalar_relational.inl"
    "src/vendor/glm/ext/scalar_uint_sized.hpp"
    "src/vendor/glm/ext/scalar_ulp.hpp"
    "src/vendor/glm/ext/scalar_ulp.inl"
    "src/vendor/glm/ext/vector_bool1.hpp"
    "src/vendor/glm/ext/vector_bool1_precision.hpp"
    "src/vendor/glm/ext/vector_bool2.hpp"
    "src/vendor/glm/ext/vector_bool2_precision.hpp"
    "src/vendor/glm/ext/vector_bool3.hpp"
    "src/vendor/glm/ext/vector_bool3_precision.hpp"
    "src/vendor/glm/ext/vector_bool4.hpp"
    "src/vendor/glm/ext/vector_bool4_precision.hpp"
    "src/vendor/glm/ext/vector_common.hpp"
    "src/vendor/glm/ext/vector_common.inl"
    "src/vendor/glm/ext/vector_double1.hpp"
    "src/vendor/glm/ext/vector_double1_precision.hpp"
    "src/vendor/glm/ext/vector_double2.hpp"
    "src/vendor/glm/ext/vector_double2_precision.hpp"
    "src/vendor/glm/ext/vector_double3.hpp"
    "src/vendor/glm/ext/vector_double3_precision.hpp"
    "src/vendor/glm/ext/vector_double4.hpp"
    "src/vendor/glm/ext/vector_double4_precision.hpp"
    "src/vendor/glm/ext/vector_float1.hpp"
    "src/vendor/glm/ext/vector_float1_precision.hpp"
    "src/vendor/glm/ext/vector_float2.hpp"
    "src/vendor/glm/ext/vector_float2_precision.hpp"
    "src/vendor/glm/ext/vector_float3.hpp"
    "src/vendor/glm/ext/vector_float3_precision.hpp"
    "src/vendor/glm/ext/vector_float4.hpp"
    "src/vendor/glm/ext/vector_float4_precision.hpp"
    "src/vendor/glm/ext/vector_int1.hpp"
    "src/vendor/glm/ext/vector_int1_sized.hpp"
    "src/vendor/glm/ext/vector_int2.hpp"
    "src/vendor/glm/ext/vector_int2_sized.hpp"
    "src/vendor/glm/ext/vector_int3.hpp"
    "src/vendor/glm/ext/vector_int3_sized.hpp"
    "src/vendor/glm/ext/vector_int4.hpp"
    "src/vendor/glm/ext/vector_int4_sized.hpp"
    "src/vendor/glm/ext/vector_integer.hpp"
    "src/vendor/glm/ext/vector_integer.inl"
    "src/vendor/glm/ext/vector_packing.hpp"
    "src/vendor/glm/ext/vector_packing.inl"
    "src/vendor/glm/ext/vector_relational.hpp"
    "src/vendor/glm/ext/vector_relational.inl"
    "src/vendor/glm/ext/vector_uint1.hpp"
    "src/vendor/glm/ext/vector_uint1_sized.hpp"
    "src/vendor/glm/ext/vector_uint2.hpp"
    "src/vendor/glm/ext/vector_uint2_sized.hpp"
    "src/vendor/glm/ext/vector_uint3.hpp"
    "src/vendor/glm/ext/vector_uint3_sized.hpp"
    "src/vendor/glm/ext/vector_uint4.hpp"
    "src/vendor/glm/ext/vector_uint4_sized.hpp"
    "src/vendor/glm/ext/vector_ulp.hpp"
    "src/vendor/glm/ext/vector_ulp.inl"
    "src/vendor/glm/fwd.hpp"
    "src/vendor/glm/geometric.hpp"
    "src/vendor/glm/glm.hpp"
    "src/vendor/glm/gtc/bitfield.hpp"
    "src/vendor/glm/gtc/bitfield.inl"
    "src/vendor/glm/gtc/color_space.hpp"
    "src/vendor/glm/gtc/color_space.inl"
    "src/vendor/glm/gtc/constants.hpp"
    "src/vendor/glm/gtc/constants.inl"
    "src/vendor/glm/gtc/epsilon.hpp"
    "src/vendor/glm/gtc/epsilon.inl"
    "src/vendor/glm/gtc/integer.hpp"
    "src/vendor/glm/gtc/integer.inl"
    "src/vendor/glm/gtc/matrix_access.hpp"
    "src/vendor/glm/gtc/matrix_access.inl"
    "src/vendor/glm/gtc/matrix_integer.hpp"
    "src/vendor/glm/gtc/matrix_inverse.hpp"
    "src/vendor/glm/gtc/matrix_inverse.inl"
    "src/vendor/glm/gtc/matrix_transform.hpp"
    "src/vendor/glm/gtc/matrix_transform.inl"
    "src/vendor/glm/gtc/noise.hpp"
    "src/vendor/glm/gtc/noise.inl"
    "src/vendor/glm/gtc/packing.hpp"
    "src/vendor/glm/gtc/packing.inl"
    "src/vendor/glm/gtc/quaternion.hpp"
    "src/vendor/glm/gtc/quaternion.inl"
    "src/vendor/glm/gtc/quaternion_simd.inl"
    "src/vendor/glm/gtc/random.hpp"
    "src/vendor/glm/gtc/random.inl"
    "src/vendor/glm/gtc/reciprocal.hpp"
    "src/vendor/glm/gtc/reciprocal.inl"
    "src/vendor/glm/gtc/round.hpp"
    "src/vendor/glm/gtc/round.inl"
    "src/vendor/glm/gtc/type_aligned.hpp"
    "src/vendor/glm/gtc/type_precision.hpp"
    "src/vendor/glm/gtc/type_precision.inl"
    "src/vendor/glm/gtc/type_ptr.hpp"
    "src/vendor/glm/gtc/type_ptr.inl"
    "src/vendor/glm/gtc/ulp.hpp"
    "src/vendor/glm/gtc/ulp.inl"
    "src/vendor/glm/gtc/vec1.hpp"
    "src/vendor/glm/gtx/associated_min_max.hpp"
    "src/vendor/glm/gtx/associated_min_max.inl"
    "src/vendor/glm/gtx/bit.hpp"
    "src/vendor/glm/gtx/bit.inl"
    "src/vendor/glm/gtx/closest_point.hpp"
    "src/vendor/glm/gtx/closest_point.inl"
    "src/vendor/glm/gtx/color_encoding.hpp"
    "src/vendor/glm/gtx/color_encoding.inl"
    "src/vendor/glm/gtx/color_space.hpp"
    "src/vendor/glm/gtx/color_space.inl"
    "src/vendor/glm/gtx/color_space_YCoCg.hpp"
    "src/vendor/glm/gtx/color_space_YCoCg.inl"
    "src/vendor/glm/gtx/common.hpp"
    "src/vendor/glm/gtx/common.inl"
    "src/vendor/glm/gtx/compatibility.hpp"
    "src/vendor/glm/gtx/compatibility.inl"
    "src/vendor/glm/gtx/component_wise.hpp"
    "src/vendor/glm/gtx/component_wise.inl"
    "src/vendor/glm/gtx/dual_quaternion.hpp"
    "src/vendor/glm/gtx/dual_quaternion.inl"
    "src/vendor/glm/gtx/easing.hpp"
    "src/vendor/glm/gtx/easing.inl"
    "src/vendor/glm/gtx/euler_angles.hpp"
    "src/vendor/glm/gtx/euler_angles.inl"
    "src/vendor/glm/gtx/extend.hpp"
    "src/vendor/glm/gtx/extend.inl"
    "src/vendor/glm/gtx/extended_min_max.hpp"
    "src/vendor/glm/gtx/extended_min_max.inl"
    "src/vendor/glm/gtx/exterior_product.hpp"
    "src/vendor/glm/gtx/exterior_product.inl"
    "src/vendor/glm/gtx/fast_exponential.hpp"
    "src/vendor/glm/gtx/fast_exponential.inl"
    "src/vendor/glm/gtx/fast_square_root.hpp"
    "src/vendor/glm/gtx/fast_square_root.inl"
    "src/vendor/glm/gtx/fast_trigonometry.hpp"
    "src/vendor/glm/gtx/fast_trigonometry.inl"
    "src/vendor/glm/gtx/float_notmalize.inl"
    "src/vendor/glm/gtx/functions.hpp"
    "src/vendor/glm/gtx/functions.inl"
    "src/vendor/glm/gtx/gradient_paint.hpp"
    "src/vendor/glm/gtx/gradient_paint.inl"
    "src/vendor/glm/gtx/handed_coordinate_space.hpp"
    "src/vendor/glm/gtx/handed_coordinate_space.inl"
    "src/vendor/glm/gtx/hash.hpp"
    "src/vendor/glm/gtx/hash.inl"
    "src/vendor/glm/gtx/integer.hpp"
    "src/vendor/glm/gtx/integer.inl"
    "src/vendor/glm/gtx/intersect.hpp"
    "src/vendor/glm/gtx/intersect.inl"
    "src/vendor/glm/gtx/io.hpp"
    "src/vendor/glm/gtx/io.inl"
    "src/vendor/glm/gtx/log_base.hpp"
    "src/vendor/glm/gtx/log_base.inl"
    "src/vendor/glm/gtx/matrix_cross_product.hpp"
    "src/vendor/glm/gtx/matrix_cross_product.inl"
    "src/vendor/glm/gtx/matrix_decompose.hpp"
    "src/vendor/glm/gtx/matrix_decompose.inl"
    "src/vendor/glm/gtx/matrix_factorisation.hpp"
    "src/vendor/glm/gtx/matrix_factorisation.inl"
    "src/vendor/glm/gtx/matrix_interpolation.hpp"
    "src/vendor/glm/gtx/matrix_interpolation.inl"
    "src/vendor/glm/gtx/matrix_major_storage.hpp"
    "src/vendor/glm/gtx/matrix_major_storage.inl"
    "src/vendor/glm/gtx/matrix_operation.hpp"
    "src/vendor/glm/gtx/matrix_operation.inl"
    "src/vendor/glm/gtx/matrix_query.hpp"
    "src/vendor/glm/gtx/matrix_query.inl"
    "src/vendor/glm/gtx/matrix_transform_2d.hpp"
    "src/vendor/glm/gtx/matrix_transform_2d.inl"
    "src/vendor/glm/gtx/mixed_product.hpp"
    "src/vendor/glm/gtx/mixed_product.inl"
    "src/vendor/glm/gtx/norm.hpp"
    "src/vendor/glm/gtx/norm.inl"
    "src/vendor/glm/gtx/normal.hpp"
    "src/vendor/glm/gtx/normal.inl"
    "src/vendor/glm/gtx/normalize_dot.hpp"
    "src/vendor/glm/gtx/normalize_dot.inl"
    "src/vendor/glm/gtx/number_precision.hpp"
    "src/vendor/glm/gtx/number_precision.inl"
    "src/vendor/glm/gtx/optimum_pow.hpp"
    "src/vendor/glm/gtx/optimum_pow.inl"
    "src/vendor/glm/gtx/orthonormalize.hpp"
    "src/vendor/glm/gtx/orthonormalize.inl"
    "src/vendor/glm/gtx/perpendicular.hpp"
    "src/vendor/glm/gtx/perpendicular.inl"
    "src/vendor/glm/gtx/polar_coordinates.hpp"
    "src/vendor/glm/gtx/polar_coordinates.inl"
    "src/vendor/glm/gtx/projection.hpp"
    "src/vendor/glm/gtx/projection.inl"
    "src/vendor/glm/gtx/quaternion.hpp"
    "src/vendor/glm/gtx/quaternion.inl"
    "src/vendor/glm/gtx/range.hpp"
    "src/vendor/glm/gtx/raw_data.hpp"
    "src/vendor/glm/gtx/raw_data.inl"
    "src/vendor/glm/gtx/rotate_normalized_axis.hpp"
    "src/vendor/glm/gtx/rotate_normalized_axis.inl"
    "src/vendor/glm/gtx/rotate_vector.hpp"
    "src/vendor/glm/gtx/rotate_vector.inl"
    "src/vendor/glm/gtx/scalar_multiplication.hpp"
    "src/vendor/glm/gtx/scalar_relational.hpp"
    "src/vendor/glm/gtx/scalar_relational.inl"
    "src/vendor/glm/gtx/spline.hpp"
    "src/vendor/glm/gtx/spline.inl"
    "src/vendor/glm/gtx/std_based_type.hpp"
    "src/vendor/glm/gtx/std_based_type.inl"
    "src/vendor/glm/gtx/string_cast.hpp"
    "src/vendor/glm/gtx/string_cast.inl"
    "src/vendor/glm/gtx/texture.hpp"
    "src/vendor/glm/gtx/texture.inl"
    "src/vendor/glm/gtx/transform.hpp"
    "src/vendor/glm/gtx/transform.inl"
    "src/vendor/glm/gtx/transform2.hpp"
    "src/vendor/glm/gtx/transform2.inl"
    "src/vendor/glm/gtx/type_aligned.hpp"
    "src/vendor/glm/gtx/type_aligned.inl"
    "src/vendor/glm/gtx/type_trait.hpp"
    "src/vendor/glm/gtx/type_trait.inl"
    "src/vendor/glm/gtx/vec_swizzle.hpp"
    "src/vendor/glm/gtx/vector_angle.hpp"
    "src/vendor/glm/gtx/vector_angle.inl"
    "src/vendor/glm/gtx/vector_query.hpp"
    "src/vendor/glm/gtx/vector_query.inl"
    "src/vendor/glm/gtx/wrap.hpp"
    "src/vendor/glm/gtx/wrap.inl"
    "src/vendor/glm/integer.hpp"
    "src/vendor/glm/mat2x2.hpp"
    "src/vendor/glm/mat2x3.hpp"
    "src/vendor/glm/mat2x4.hpp"
    "src/vendor/glm/mat3x2.hpp"
    "src/vendor/glm/mat3x3.hpp"
    "src/vendor/glm/mat3x4.hpp"
    "src/vendor/glm/mat4x2.hpp"
    "src/vendor/glm/mat4x3.hpp"
    "src/vendor/glm/mat4x4.hpp"
    "src/vendor/glm/matrix.hpp"
    "src/vendor/glm/packing.hpp"
    "src/vendor/glm/simd/common.h"
    "src/vendor/glm/simd/exponential.h"
    "src/vendor/glm/simd/geometric.h"
    "src/vendor/glm/simd/integer.h"
    "src/vendor/glm/simd/matrix.h"
    "src/vendor/glm/simd/neon.h"
    "src/vendor/glm/simd/packing.h"
    "src/vendor/glm/simd/platform.h"
    "src/vendor/glm/simd/trigonometric.h"
    "src/vendor/glm/simd/vector_relational.h"
    "src/vendor/glm/trigonometric.hpp"
    "src/vendor/glm/vec2.hpp"
    "src/vendor/glm/vec3.hpp"
    "src/vendor/glm/vec4.hpp"
    "src/vendor/glm/vector_relational.hpp"
    "src/vendor/imgui/imconfig.h"
    "src/vendor/imgui/imgui.h"
    "src/vendor/imgui/imgui_impl_glfw.h"
    "src/vendor/imgui/imgui_impl_opengl3.h"
    "src/vendor/imgui/imgui_internal.h"
    "src/vendor/imgui/imstb_rectpack.h"
    "src/vendor/imgui/imstb_textedit.h"
    "src/vendor/imgui/imstb_truetype.h"
    "src/vendor/perlin_noise/PerlinNoise.hpp"
    "src/vendor/simplex_noise/SimplexNoise.h"
    "src/vendor/stb_image/stb_image.h"
    "tests/vendor/catch.hpp"
)
source_group("Header Files" FILES ${Header_Files})

set(Source_Files
    "examples/ExampleScene.cpp"
    "src/engine/BlockFaces.cpp"
    "src/engine/BlockInfo.cpp"
    "src/engine/Chunk.cpp"
    "src/engine/Commands.cpp"
    "src/engine/files/Export.cpp"
    "src/engine/Game.cpp"
    "src/engine/GameObject.cpp"
    "src/engine/GameObjectFactory.cpp"
    "src/engine/InputHandler.cpp"
    "src/engine/L-systems/LSystemExecutor.cpp"
    "src/engine/L-systems/LSystemParser.cpp"
    "src/engine/L-systems/RandomGrammar.cpp"
    "src/engine/L-systems/Turtle.cpp"
    "src/engine/Random.cpp"
    "src/engine/ResourceManager.cpp"
    "src/engine/Scene.cpp"
    "src/game/Biome.cpp"
    "src/game/BlockFactory.cpp"
    "src/game/Terrain.cpp"
    "src/game/TerrainGen.cpp"
    "src/game/vegetation/GrassFactory.cpp"
    "src/game/vegetation/LSystemsManager.cpp"
    "src/game/vegetation/Tree.cpp"
    "src/game/vegetation/TreeFactory.cpp"
    "src/helpers/Math.cpp"
    "src/main.cpp"
    "src/open_gl/GpuTimer.cpp"
    "src/open_gl/InputHandlerGl.cpp"
    "src/open_gl/WindowManagerGl.cpp"
    "src/renderer/Camera.cpp"
    "src/renderer/CubeRenderer.cpp"
    "src/renderer/Debug.cpp"
    "src/renderer/light/DepthMap.cpp"
    "src/renderer/light/ShadowMap.cpp"
    "src/renderer/Mesh.cpp"
    "src/renderer/SceneRenderer.cpp"
    "src/renderer/Shader.cpp"
    "src/renderer/Texture2D.cpp"
    "src/vendor/glad/glad.c"
    "src/vendor/glm/detail/glm.cpp"
    "src/vendor/imgui/imgui.cpp"
    "src/vendor/imgui/imgui_demo.cpp"
    "src/vendor/imgui/imgui_draw.cpp"
    "src/vendor/imgui/imgui_impl_glfw.cpp"
    "src/vendor/imgui/imgui_impl_opengl3.cpp"
    "src/vendor/imgui/imgui_tables.cpp"
    "src/vendor/imgui/imgui_widgets.cpp"
    "src/vendor/simplex_noise/SimplexNoise.cpp"
    "src/vendor/stb_image/stb_image.cpp"
    "tests/engine/BlockFacesTest.cpp"
    "tests/engine/BlockInfoTest.cpp"
    "tests/engine/Components/TransformTest.cpp"
    "tests/engine/GameObjectFactoryTest.cpp"
    "tests/engine/GameObjectTest.cpp"
    "tests/engine/L-systems/LSystemExecutorTest.cpp"
    "tests/engine/L-systems/LSystemParserTest.cpp"
    "tests/engine/L-systems/RandomGrammarTest.cpp"
    "tests/engine/L-systems/TurtleTest.cpp"
    "tests/engine/RandomTest.cpp"
    "tests/engine/SceneTest.cpp"
    "tests/helpers/MathTest.cpp"
    "tests/helpers/PrintTest.cpp"
    "tests/renderer/ShaderTest.cpp"
)
source_group("Source Files" FILES ${Source_Files})

set(ALL_FILES
    ${no_group_source_files}
    ${Header_Files}
    ${Source_Files}
)

################################################################################
# Target
################################################################################
add_executable(${PROJECT_NAME} ${ALL_FILES})

use_props(${PROJECT_NAME} "${CMAKE_CONFIGURATION_TYPES}" "${DEFAULT_CXX_PROPS}")
set(ROOT_NAMESPACE VoxelGame)

set_target_properties(${PROJECT_NAME} PROPERTIES
    VS_GLOBAL_KEYWORD "Win32Proj"
)
################################################################################
# Output directory
################################################################################
if("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x64")
    set_target_properties(${PROJECT_NAME} PROPERTIES
        OUTPUT_DIRECTORY_DEBUG   "${CMAKE_SOURCE_DIR}/$<CONFIG>/"
        OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/$<CONFIG>/"
    )
endif()
if("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x64")
    set_target_properties(${PROJECT_NAME} PROPERTIES
        INTERPROCEDURAL_OPTIMIZATION_RELEASE "TRUE"
    )
elseif("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x86")
    set_target_properties(${PROJECT_NAME} PROPERTIES
        INTERPROCEDURAL_OPTIMIZATION_RELEASE "TRUE"
    )
endif()
################################################################################
# Include directories
################################################################################
if("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x64")
    target_include_directories(${PROJECT_NAME} PUBLIC
        "${CMAKE_CURRENT_SOURCE_DIR}/src;"
        "${CMAKE_CURRENT_SOURCE_DIR}/src/vendor;"
        "${CMAKE_CURRENT_SOURCE_DIR}/examples;"
        "${CMAKE_CURRENT_SOURCE_DIR}/tests;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/GLFW_x64/include;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/GLEW/include;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/GLAD/include"
    )
elseif("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x86")
    target_include_directories(${PROJECT_NAME} PUBLIC
        "${CMAKE_CURRENT_SOURCE_DIR}/src;"
        "${CMAKE_CURRENT_SOURCE_DIR}/src/vendor;"
        "${CMAKE_CURRENT_SOURCE_DIR}/tests;"
        "${CMAKE_CURRENT_SOURCE_DIR}/examples;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/GLFW_x64/include;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/GLEW/include;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/GLAD/include"
    )
endif()

################################################################################
# Compile definitions
################################################################################
if("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x64")
    target_compile_definitions(${PROJECT_NAME} PRIVATE
        "$<$<CONFIG:Debug>:"
            "GLEW_STATIC;"
            "WIN32;"
            "GLM_FORCE_SILENT_WARNINGS;"
            "_DEBUG"
        ">"
        "$<$<CONFIG:Export>:"
            "_DEBUG"
        ">"
        "$<$<CONFIG:Release>:"
            "GLEW_STATIC;"
            "WIN32;"
            "GLM_FORCE_SILENT_WARNINGS;"
            "NDEBUG"
        ">"
        "$<$<CONFIG:Test>:"
            "_DEBUG"
        ">"
        "_CONSOLE;"
        "UNICODE;"
        "_UNICODE"
    )
elseif("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x86")
    target_compile_definitions(${PROJECT_NAME} PRIVATE
        "$<$<CONFIG:Debug>:"
            "_DEBUG"
        ">"
        "$<$<CONFIG:Export>:"
            "_DEBUG"
        ">"
        "$<$<CONFIG:Release>:"
            "NDEBUG"
        ">"
        "$<$<CONFIG:Test>:"
            "_DEBUG;"
            "TEST_ONLY"
        ">"
        "GLEW_STATIC;"
        "WIN32;"
        "GLM_FORCE_SILENT_WARNINGS;"
        "_CONSOLE;"
        "UNICODE;"
        "_UNICODE"
    )
endif()

################################################################################
# Compile and link options
################################################################################
if(MSVC)
    if("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x64")
        target_compile_options(${PROJECT_NAME} PRIVATE
            $<$<CONFIG:Debug>:
                /W4
            >
            $<$<CONFIG:Export>:
                /W3
            >
            $<$<CONFIG:Release>:
                /Oi;
                /Gy;
                /W4
            >
            $<$<CONFIG:Test>:
                /W3
            >
            /permissive-;
            /sdl;
            ${DEFAULT_CXX_DEBUG_INFORMATION_FORMAT};
            ${DEFAULT_CXX_EXCEPTION_HANDLING}
        )
    elseif("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x86")
        target_compile_options(${PROJECT_NAME} PRIVATE
            $<$<CONFIG:Export>:
                /O2
            >
            $<$<CONFIG:Release>:
                /Oi;
                /Gy
            >
            /permissive-;
            /sdl;
            /W4;
            /WX-;
            ${DEFAULT_CXX_DEBUG_INFORMATION_FORMAT};
            ${DEFAULT_CXX_EXCEPTION_HANDLING}
        )
    endif()
    if("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x64")
        target_link_options(${PROJECT_NAME} PRIVATE
            $<$<CONFIG:Release>:
                /OPT:REF;
                /OPT:ICF
            >
            /DEBUG;
            /SUBSYSTEM:CONSOLE;
            /INCREMENTAL
        )
    elseif("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x86")
        target_link_options(${PROJECT_NAME} PRIVATE
            $<$<CONFIG:Release>:
                /OPT:REF;
                /OPT:ICF
            >
            /DEBUG;
            /SUBSYSTEM:CONSOLE;
            /INCREMENTAL
        )
    endif()
endif()

################################################################################
# Dependencies
################################################################################
if("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x64")
    set(ADDITIONAL_LIBRARY_DEPENDENCIES
        "$<$<CONFIG:Debug>:"
            "glfw3;"
            "opengl32;"
            "User32;"
            "Gdi32;"
            "Shell32;"
            "glew32s"
        ">"
        "$<$<CONFIG:Release>:"
            "glfw3;"
            "opengl32;"
            "User32;"
            "Gdi32;"
            "Shell32;"
            "glew32s"
        ">"
    )
elseif("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x86")
    set(ADDITIONAL_LIBRARY_DEPENDENCIES
        "glfw3;"
        "opengl32;"
        "User32;"
        "Gdi32;"
        "Shell32;"
        "glew32s"
    )
endif()
target_link_libraries(${PROJECT_NAME} PRIVATE "${ADDITIONAL_LIBRARY_DEPENDENCIES}")

if("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x64")
    target_link_directories(${PROJECT_NAME} PRIVATE
        "$<$<CONFIG:Debug>:"
            "${CMAKE_SOURCE_DIR}/Dependencies/GLEW/lib/Release/x64;"
            "${CMAKE_SOURCE_DIR}/Dependencies/GLAD/include;"
            "${CMAKE_SOURCE_DIR}/Dependencies/GLFW_x64/lib-vc2019"
        ">"
        "$<$<CONFIG:Release>:"
            "${CMAKE_SOURCE_DIR}/Dependencies/GLEW/lib/Release/x64;"
            "${CMAKE_SOURCE_DIR}/Dependencies/GLAD/include;"
            "${CMAKE_SOURCE_DIR}/Dependencies/GLFW_x64/lib-vc2019"
        ">"
    )
elseif("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x86")
    target_link_directories(${PROJECT_NAME} PRIVATE
        "${CMAKE_SOURCE_DIR}/Dependencies/GLEW/lib/Release/Win32;"
        "${CMAKE_SOURCE_DIR}/Dependencies/GLAD/include;"
        "${CMAKE_SOURCE_DIR}/Dependencies/GLFW/lib-vc2019"
    )
endif()

